Pre-compile java.net stubs with --release 8, add as JAR dependency